test/compile_errors/err_no_std_owned_str_requires_alloc.w
//! args: --no-std
//! expect-check-fail: str requires alloc

@[panic_handler]
fn on_panic -> Never: unreachable()

@[entry]
fn start -> i32:
    let owned: str = "hello"
    owned.len()
